# pagai

./: .gitignore  CMakeLists.txt  README.md  autoinstall-out-of-tree.sh  autoinstall-withppl.sh  autoinstall.sh  default_build.sh
cmake/: CodeCoverage.cmake  ConfigureApron.cmake  DepInstall.cmake  ExternalProject.patch.cmake  FindBISON.cmake  MakeConfigFile.cmake  SetupDefaultCompilerDirs.cmake  SimpleInstall.cmake
cmake/Modules/: FindAPRON.cmake  FindCUDD.cmake  FindGMP.cmake  FindLLVM.cmake  FindMPFR.cmake  FindPPL.cmake  FindYICES.cmake  FindZ3.cmake
scripts/: build_coverage.sh
src/: AIClassic.h  AIGopan.h  AIGuided.cc  AIGuided.h  AISimple.cc  AISimple.h  AIdis.cc  AIdis.h  AIopt.cc  AIopt.h  AIopt_incr.h  AIpass.cc  AIpass.h  AIpf.cc  AIpf.h  AIpf_incr.h  Abstract.cc  Abstract.h  AbstractClassic.cc  AbstractClassic.h  AbstractDisj.cc  AbstractDisj.h  AbstractGopan.cc  AbstractGopan.h  AbstractMan.h  AnalysisPass.cc  AnalysisPass.h  Analyzer.cc  Analyzer.h  CMakeLists.txt  Compare.cc  Compare.h  CompareDomain.h  CompareNarrowing.h  Constraint.cc  Constraint.h  Debug.cc  Debug.h  Doxyfile.in  Environment.cc  (+63 more)
tests/: CMakeLists.txt  README.md
tests/asserts/: simple.c  test_driver.sh  two_variables_for.c
tests/known_bugs/: test_driver_different_outputs.sh  three_variables_for.c  three_variables_for.out.1.c  three_variables_for.out.2.c
tests/non_regression/: compare_techs.c  compare_techs.expected.c  empty_main.expected.c  one_variable_for.c  one_variable_for.expected.1.c  one_variable_for.expected.2.c  one_variable_while.c  one_variable_while.expected.c  test_driver.sh
tests/unit/: canonize_line.cc
